Revert "add java.time accessible to Gson"
This reverts commit faf22bf7de40fdbc3132ec5009e8f920a215c918.